kubernetes/postgres-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    service: postgres
  name: postgres
  namespace: tradingbot22
  annotations:
    backup.velero.io/backup-volumes: postgres-tradingbot
spec:
  replicas: 1
  selector:
    matchLabels:
      service: postgres
  strategy:
    type: Recreate
  template:
    metadata:    
      labels:
        service: postgres
      annotations:
        backup.velero.io/backup-volumes: postgres-tradingbot
    spec:
      containers:
        - env:
            - name: POSTGRES_DB
              value: postgres
            - name: POSTGRES_PASSWORD
              value: postgres
            - name: POSTGRES_USER
              value: postgres
          image: postgres:14-alpine
          name: postgres
          ports:
            - containerPort: 5432
          resources: {}
          volumeMounts:
            - mountPath: /var/lib/postgresql/data
              name: postgres-tradingbot
      restartPolicy: Always
      volumes:
        - name: postgres-tradingbot
          persistentVolumeClaim:
            claimName: postgres-tradingbot
status: {}
