kubernetes/tradingbot-baseimage-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:


  labels:
    io.kompose.service: tradingbot-baseimage
  name: tradingbot-baseimage
  namespace: tradingbot22
spec:
  replicas: 1
  selector:
    matchLabels:
      io.kompose.service: tradingbot-baseimage
  strategy: {}
  template:
    metadata:
      labels:
        io.kompose.service: tradingbot-baseimage
    spec:
      containers:
        - env:
            - name: PSQL_URL
              value: postgres:Pug875613@postgres-service.dbstaging.svc.cluster.local:5432/postgres # i mean it's a prototype so come on
            - name: ALPACA_API_KEY
              valueFrom:
                secretKeyRef:
                  key: apikey
                  name: alpaca-api-secret
            - name: ALPACA_SECRET
              valueFrom:
                secretKeyRef:
                  key: apisecret
                  name: alpaca-api-secret
          image: guestros/tradingbot22-backend:latest
          name: tradingbot-backend
          ports:
            - containerPort: 8000
          resources: {}
          livenessProbe:
            exec:
              command:
              - curl --fail http://localhost:8000/healthz || exit 1
            initialDelaySeconds: 5
            periodSeconds: 300
      restartPolicy: Always
status: {}
