kubernetes/tradingbot-baseimage-service.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    io.kompose.service: tradingbot-baseimage
  name: tradingbot-baseimage-service
  namespace: tradingbot22
spec:
  ports:
    - name: "8000"
      port: 8000
      targetPort: 8000
  selector:
    io.kompose.service: tradingbot-baseimage
status:
  loadBalancer: {}
