kubernetes/tradingbot-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: tradingbot-backend
  namespace: tradingbot
  labels:
    app: tradingbot
spec:
  replicas: 1
  selector:
    matchLabels:
      app: tradingbot
  template:
    metadata:
      labels:
        app: tradingbot
    spec:
      imagePullSecrets:
        - name: regcred
      containers: # 
        - name: tradingbot
          image: registry.k8s.datafortress.cloud/tradingbot22-backend:latest
          ports:
            - containerPort: 8000
          resources:
            limits:
              memory: "512Mi"
              cpu: "500m"
            requests:
              memory: "5Mi"
              cpu: "5m"
---
apiVersion: v1
kind: Service
metadata:
  name: tradingbot-backend
  namespace: tradingbot
spec:
  type: ClusterIP
  selector:
    app: tradingbot
  ports:
    - protocol: TCP
      port: 8000
      targetPort: 8000
