kubernetes/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-prod
    nginx.ingress.kubernetes.io/ssl-redirect: "true"
    nginx.ingress.kubernetes.io/auth-type: basic
    nginx.ingress.kubernetes.io/auth-secret: basic-auth-trading
    nginx.ingress.kubernetes.io/auth-realm: 'Authentication Required'
  labels:
    app: tradingbot-backend
  name: tradingbot-backend
  namespace: tradingbot
spec:
  ingressClassName: nginx
  rules:
  - host: tradingbot-backend.k8s.datafortress.cloud
    http:
      paths:
      - backend:
          service:
            name: tradingbot-backend
            port:
              number: 8000
        path: /
        pathType: Prefix
  tls:
  - hosts:
    - tradingbot-backend.k8s.datafortress.cloud
    secretName: ske-executor-tls
